# api_spotify

./: .coverage  README.md  api_spotify.ipynb  pyproject.toml
api_spotify/: Auth.py  constants.py  db_manager.py  main.py  playlist.py
class/: Artist.py  Auth.py  Client.py  Connection.py  ManageDb.py  Playlist.py  constants.py  main.py
code/: sql_db.sql
code/class/: ManageDb.py  constants.py  main.py  utils.py
code/notebook/: api_spotify.ipynb
code/notebook/.ipynb_checkpoints/: api_spotify-checkpoint.ipynb
data/: evolution_popularite.csv  histo_entrees_sorties.csv  playlists.csv
notebook/: api_spotify.ipynb
tests/: artist_data.json  test_api_spotify.py
utils/: environment.yml
