[tool.poetry]
name = "api_spotify"
version = "0.1.0"
description = "Projet visant à collecter des informations de l'api spotify et insérer dans la DB les structures souhaitées"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
