[tool.poetry]
name = "api_spotify"
version = "0.1.0"
description = "Projet visant à collecter des informations de l'api spotify et insérer dans la DB les structures souhaitées"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
